Added and styled hero section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
         #email__container {
             width: 600px; border-spacing: 0; padding: 0; margin-left: auto; margin-right: auto; border: 0;
         }
+        #hero {
+            width: 100%; border-spacing: 0; padding: 0;  border: 0;
+        }
+        #hero__img{
+            width: 600px;
+        }
+        #hero__txt {
+            font-family: 'Montserrat', arial, helvetica, sans-serif; line-height: 24px; font-size: 20px; text-align: center; margin-top: 0; margin-bottom: 25px;
+        }
+        #hero__button {
+            text-align: center;
+        }
+        .kids-cta {
+           background: #26d7df; color: #ffffff; text-decoration: none; font-family: arial, helvetica, sans-serif; font-size: 20px; padding: 14px 20px; font-weight: 600;
+        }
     </style>
 </head>
 <body id="body">
@@ -24,7 +39,34 @@
             <td>
                 <!-- Start of Email Container -->
                 <table id="email__container">
+                    <!-- Start of Hero Section -->
+                    <tr>
+                        <td>
+                            <table id="hero">
+                                <tr >
+                                    <td>
+                                        <a href="https://www.saucony.com/en/kids/" target="__blank">
+                                            <img src="/img/hero.jpg" alt="hero" id="hero__img">
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr >
+                                    <td>
+                                        <p id="hero__txt">These all day play-approved styles can keep up <br> with high energy fun. From backyards to trails and <br> anything in between. Saucony Kids’ style are <br> designed with little feet in mind.</p>
+                                    </td>
+                                </tr>
+                                <tr id="hero__button">
+                                    <td>
+                                        <a href="https://www.saucony.com/en/kids/" target="__blank" class="kids-cta">
+                                            Shop all Saucony Kids’ Styles
+                                        </a>
+                                    </td>
+                                </tr>
 
+                            </table>
+                        </td>
+                    </tr>
+                     <!-- Start of Hero Section -->
                 </table>
                 <!-- Start of Email Container -->
             </td>
