--- a/index.html
+++ b/index.html
@@ -239,6 +239,86 @@
             color: #585858;
             text-decoration: solid underline #969696 1px;
         }
+
+        /* Media Queries */
+        @media only screen and (max-width: 1024px) {
+            #windshield-img {
+                width: 30%;
+            }
+
+            #windshield-txt {
+                width: 70%;
+            }
+
+            #peregrine-txt {
+                width: 70%;
+            }
+
+            #peregrine-img {
+                width: 30%;
+            }
+
+            #kinvara-img {
+                width: 30%;
+            }
+
+            #kinvara-txt {
+                width: 70%;
+            }
+
+            #shoes__button {
+                margin-top: 44px;
+            }
+
+            #cta__buttons-running,
+            #cta__buttons-originals,
+            #cta__buttons-shoeadvisor {
+                position: relative;
+                left: 0;
+            }
+
+            #cta__buttons-trail,
+            #cta__buttons-apparel,
+            #cta__buttons-widewidths {
+                position: relative;
+                right: 0;
+            }
+        }
+
+        @media only screen and (max-width:768px) {
+            #windshield-img {
+                width: 10%;
+            }
+
+            #windshield-txt {
+                width: 90%;
+            }
+
+            #peregrine-txt {
+                width: 90%;
+            }
+
+            #peregrine-img {
+                width: 10%;
+            }
+
+            #kinvara-img {
+                width: 10%;
+            }
+
+            #kinvara-txt {
+                width: 90%;
+            }
+
+        }
+
+        @media only screen and (min-width:320px) {
+            #\ kinvara-img {
+                position: relative;
+                left: 4px;
+                bottom: 8px;
+            }
+        }
     </style>
 </head>
 
@@ -300,7 +380,7 @@
                     <!-- Start of WindShield  -->
                     <tr>
                         <td>
-                            <table class="shoes__left">
+                            <table class="shoes__left" id="windshield-img">
                                 <tr>
                                     <td id="shoes__left-windshield">
                                         <a href="https://www.saucony.com/en/wind-shield-a-c-sneaker/44743K.html?dwvar_44743K_color=SK164316"
@@ -314,7 +394,7 @@
                             </table>
                         </td>
                         <td>
-                            <table class="shoes__right">
+                            <table class="shoes__right" id="windshield-txt">
                                 <tr>
                                     <td class="shoes__text">
                                         <p class="shoes__title">Wind Shield</p>
@@ -334,7 +414,7 @@
                     <!-- Start of Peregrine 11 Shield  -->
                     <tr>
                         <td>
-                            <table class="shoes__left">
+                            <table class="shoes__left" id="peregrine-txt">
                                 <tr>
                                     <td class="shoes__text">
                                         <p class="shoes__title">Peregrine 11</p>
@@ -348,7 +428,7 @@
                             </table>
                         </td>
                         <td>
-                            <table class="shoes__right">
+                            <table class="shoes__right" id="peregrine-img">
                                 <tr>
                                     <td>
                                         <a href="https://www.saucony.com/en/peregrine-11-shield-sneaker/48742K.html"
@@ -366,7 +446,7 @@
                     <!-- Start of Kinvara 12 -->
                     <tr>
                         <td>
-                            <table class="shoes__left" id="shoes__left-kinvara">
+                            <table class="shoes__left" id=" kinvara-img">
                                 <tr>
                                     <td>
                                         <img src="img/shoe-3.jpg" alt="shoe-1" class="shoes__img">
@@ -376,7 +456,7 @@
                             </table>
                         </td>
                         <td>
-                            <table class="shoes__right">
+                            <table class="shoes__right" id="kinvara-txt">
                                 <tr>
                                     <td class="shoes__text">
                                         <p class="shoes__title">Kinvara 12</p>
