--- a/index.html
+++ b/index.html
@@ -12,22 +12,7 @@
             font-family: 'Montserrat', arial, helvetica, sans-serif;
         }
 
-        #email {
-            width: 100%;
-            border: 0;
-            border-spacing: 0;
-            padding: 0;
-        }
-
-        #email__container {
-            width: 600px;
-            border-spacing: 0;
-            padding: 0;
-            margin-left: auto;
-            margin-right: auto;
-            border: 0;
-        }
-
+      
         .container {
             width: 100%;
             border-spacing: 0;
@@ -58,7 +43,10 @@
             text-decoration: none;
             font-family: arial, helvetica, sans-serif;
             font-size: 20px;
-            padding: 14px 20px;
+            padding-top: 14px;
+            padding-bottom: 14px;
+            padding-left: 20px;
+            padding-right: 20px;
             font-weight: 600;
         }
 
@@ -324,11 +312,11 @@
 
 <body id="body">
     <!-- Start of Email -->
-    <table id="email">
+    <table style=" width: 100%; border: 0; border-spacing: 0; padding: 0;">
         <tr>
             <td>
                 <!-- Start of Email Container -->
-                <table id="email__container">
+                <table style=" width: 600px; border-spacing: 0; padding: 0; margin-left: auto; margin-right: auto; border: 0;">
                     <!-- Start of Hero Section -->
                     <tr>
                         <td>
@@ -336,7 +324,7 @@
                                 <tr>
                                     <td>
                                         <a href="https://www.saucony.com/en/kids/" target="__blank">
-                                            <img src="img/hero.jpg" alt="hero" id="hero__img">
+                                            <img src="https://i.imgur.com/y1lpBFk.jpg" alt="hero" id="hero__img">
                                         </a>
                                     </td>
                                 </tr>
@@ -366,7 +354,7 @@
                 <table class="container" id="ellipsis">
                     <tr>
                         <td>
-                            <img src="img/ellipsis.jpg" alt="ellipsis" id="ellipsis__img">
+                            <img src="https://i.imgur.com/9lALmlc.jpg" alt="ellipsis" id="ellipsis__img">
                         </td>
                     </tr>
                 </table>
@@ -385,7 +373,7 @@
                                     <td id="shoes__left-windshield">
                                         <a href="https://www.saucony.com/en/wind-shield-a-c-sneaker/44743K.html?dwvar_44743K_color=SK164316"
                                             target="__blank">
-                                            <img src="img/shoe-1.jpg" alt="shoe-1" class="shoes__img">
+                                            <img src="https://i.imgur.com/s7PksAP.jpg" alt="shoe-1" class="shoes__img">
                                         </a>
 
                                     </td>
@@ -433,7 +421,7 @@
                                     <td>
                                         <a href="https://www.saucony.com/en/peregrine-11-shield-sneaker/48742K.html"
                                             target="__blank">
-                                            <img src="img/shoe-2.jpg" alt="shoe-1" class="shoes__img">
+                                            <img src="https://i.imgur.com/moljgnV.jpg" alt="shoe-1" class="shoes__img">
                                         </a>
 
                                     </td>
@@ -449,7 +437,7 @@
                             <table class="shoes__left" id=" kinvara-img">
                                 <tr>
                                     <td>
-                                        <img src="img/shoe-3.jpg" alt="shoe-1" class="shoes__img">
+                                        <img src="https://i.imgur.com/ismHBmw.jpg" alt="shoe-1" class="shoes__img">
                                     </td>
                                 </tr>
 
